--- a/Q1.html
+++ b/Q1.html
@@ -11,7 +11,7 @@
      <h1>Question 1</h1>
       <div>
         
-        <p class="animate__backInRight">Who mapped out the eastern side of Australia (The great southern land)</p> <br>
+        <p class="animate__backInRight">Who mapped out the eastern side of Australia (The great southern land)?</p> <br>
         
              <div>
                     <input type="radio" name="q1" required value="Answer1" id="q1a1">Captain James Cook<br>
