--- a/Q2.html
+++ b/Q2.html
@@ -18,7 +18,7 @@
     <h1>Question 2</h1>
      <div>
        
-       <p>Who led the First Fleet</p> <br>
+       <p>Who led the First Fleet?</p> <br>
        
             <div>
                    <input type="radio" name="q2" required value="Answer1" id="q2a1">Captain Phillip Arthur<br>
