--- a/Q8.html
+++ b/Q8.html
@@ -19,7 +19,7 @@
                     <input type="radio" name="q8" value="Answer3" id="q8a3">Dieing<br>
                     <input type="radio" name="q8" value="Answer4" id="q8a4">All of the above<br>
                     <br><button id="q1btn" class="Submit">Submit Answer</button>
-                    <button class="Next"><a href="Q2.html">Finish Quiz</a></button>
+                    <button class="Next"><a href="finish.html">Finish Quiz</a></button>
             </div>    
     
     
